# veridict

./: .gitattributes  .gitignore  .veridict.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  veridict.yml
benchmark/: README.md  run_benchmark.py  summarize.py
benchmark/results/: runs.jsonl
examples/: agent_transcript.md
examples/demo_project/: .veridict.yaml  calculator.py  test_calculator.py
scripts/: make_demo_svg.py
src/veridict/: __init__.py  __main__.py  claims.py  cli.py  config.py  engine.py  models.py  report.py  scanners.py  verifiers.py
tests/: test_claims.py  test_cli.py  test_config.py  test_engine.py  test_report.py  test_scanners.py  test_verifiers.py
