[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veridict"
version = "0.2.1"
description = "Independently verify what your AI coding agent claims it did — and render a verdict."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Venu Mittapalli" }]
keywords = [
    "ai",
    "ai-agents",
    "coding-agent",
    "verification",
    "testing",
    "trust",
    "cli",
    "llm",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
veridict = "veridict.cli:main"

[project.urls]
Homepage = "https://github.com/venumittapalli576/veridict"
Repository = "https://github.com/venumittapalli576/veridict"
Issues = "https://github.com/venumittapalli576/veridict/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/veridict"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["examples/demo_project"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer/Click use callables in argument defaults by design.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
